# pymetrica

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Pipfile  README.md  architecture_diagram_20260315_200118.mmd  architecture_draft.md  poc.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  deploy.yml
pymetrica/: __init__.py  __main__.py  cli.py  deprecated_all.py  first_pass.py  main.py  run_all.py  second_pass.py  status.py
pymetrica/codebase_parser/: __init__.py  base_stats.py  codebase_parser.py  diagram_generator.py
pymetrica/codebase_parser/logical_lines_of_code/: count_lloc.py
pymetrica/deprecated/: first_pass.py
pymetrica/metric_calculators/: __init__.py
pymetrica/metric_calculators/abstract_lines_of_code/: __init__.py  aloc_calculator.py  aloc_metric.py  first_pass.py  get_aloc.py  second_pass.py
pymetrica/metric_calculators/cyclomatic_complexity/: __init__.py  cc_calculator.py  cc_metric.py  cc_visitor.py  get_cc.py
pymetrica/metric_calculators/halstead_volume/: __init__.py  get_hv.py  hv_calculator.py  hv_metric.py  hv_visitor.py
pymetrica/metric_calculators/instability/: __init__.py  get_instability.py  instability_calculator.py  instability_logic.py  instability_metric.py  instability_results.py
pymetrica/metric_calculators/maintainability_cost/: __init__.py  get_mc.py  mc_calculator.py  mc_metric.py
pymetrica/metric_calculators/maintainability_index/: __init__.py  get_mi.py  mi_calculator.py  mi_metric.py  mi_results.py
pymetrica/models/: __init__.py  code.py  codebase.py  metric.py  metric_calculator.py  report_generator.py
pymetrica/playground/: mi_explorer.html
pymetrica/report_generators/: __init__.py  basic_terminal_report.py  reports_mapping.py
pymetrica/utils/: __init__.py  is_comment.py  is_lloc.py  logging.py  profiler.py
tests/: conftest.py
tests/bigger_codebase/exception_handlers/: __init__.py  codebase_exception.py
tests/bigger_codebase/middlewares/: logging_middleware.py
tests/codebase_parser/: conftest.py  test_codebase_parser.py  test_diagram_generator.py
tests/metric_calculators/abstract_lines_of_code/: conftest.py  test_get_aloc.py
tests/metric_calculators/cyclomatic_complexity/: conftest.py  test_get_cc.py
tests/metric_calculators/halstead_volume/: conftest.py  test_get_hv.py
tests/metric_calculators/maintainability_cost/: conftest.py  test_get_mc.py
tests/metric_calculators/maintainability_index/: conftest.py  test_get_mi.py
tests/sample_codebase/: sample_code.py
tests/sample_codebases/big_codebase/: main.py
tests/sample_codebases/big_codebase/routes/: routes.py
tests/sample_codebases/small_codebase/: sample_code.py
