[build-system]
requires = [
    "setuptools ~= 68.2",
    "wheel ~= 0.41.2",
    "setuptools-pipfile ~= 0.7.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pymetrica"
description = "Codebase metrics and analysis tool for Python projects"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
keywords = [
    "code",
    "metrics",
    "python",
    "pymetrica",
    "analysis",
    "statistics",
    "maintainability",
    "quality",
    "design",
    "complexity",
]
authors = [
    { name = "Juan José Farina", email = "juanjosefarina.jjf@gmail.com" },
]
dynamic = ['version', 'readme']
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]

[project.scripts]
pymetrica = "pymetrica.__main__:main"

[tool.setuptools.package-data]
"*" = ["py.typed", "*.md"]

[tool.setuptools.dynamic]
version = { attr = "pymetrica.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools-pipfile]

[tool.mypy]
strict = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
fix = true
preview = true

[tool.ruff.lint]
ignore = [
    "EXE002", # ignores warnings on __init__.py files without shebangs
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pylint.main]
fail-under = 10
jobs = 4
limit-inference-results = 100
py-version = "3.10"
suggestion-mode = true

[tool.pylint."messages control"]
disable = [
    "import-error",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "fixme",
    "logging-fstring-interpolation",
]


[tool.semantic_release.branches.main]
match = "(main|develop)"

[tool.semantic_release]
commit_message = "chore(release): bump version and update changelog"
version_source = "tag"
version_variables = ["pymetrica/__init__.py:__version__"]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = ["chore*", "Merge*"]

[tool.semantic_release.commit_parser_options]
allowed_tags = ["chore", "feat", "fix"]
minor_tags = ["feat"]
patch_tags = ["fix"]
